tdf#112027: avoid leaks in FillTreeBox (sfx2)

Next step could be using std::unique_ptr<StyleTree_Impl>
instead of StyleTree_Impl*

Change-Id: Ifbf5313fedf1fc0310073918f91edd6fe75d0afc
Reviewed-on: https://gerrit.libreoffice.org/41710
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit c82e5db9626e4d84300f84842b837e852be828be)
Reviewed-on: https://gerrit.libreoffice.org/41925
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>